WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85222
[gtk, qt, chromium, win] Fix usage of LayoutUnits and rounding in platform code
https://bugs.webkit.org/show_bug.cgi?id=85222
Summary
[gtk, qt, chromium, win] Fix usage of LayoutUnits and rounding in platform code
Emil A Eklund
Reported
2012-04-30 11:57:32 PDT
There are a handful of places left in the platform code that needs to be updated to use the right unit.
Attachments
Patch
(11.21 KB, patch)
2012-04-30 12:18 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2012-04-30 12:18:15 PDT
Created
attachment 139502
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-04-30 12:22:07 PDT
Comment on
attachment 139502
[details]
Patch LGTM.
Emil A Eklund
Comment 3
2012-04-30 14:44:25 PDT
Committed
r115672
: <
http://trac.webkit.org/changeset/115672
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug