Source/WebCore/platform/win/PopupMenuWin.cpp
@@ -655,7 +655,7 @@ void PopupMenuWin::paint(const IntRect& damageRect, HDC hdc)
         if (itemStyle.isVisible()) {
             int textX = max<int>(0, client()->clientPaddingLeft() - client()->clientInsetLeft());
             if (RenderTheme::defaultTheme()->popupOptionSupportsTextIndent() && itemStyle.textDirection() == LTR)
-                textX += minimumValueForLength(itemStyle.textIndent(), itemRect.width());
+                textX += minimumIntValueForLength(itemStyle.textIndent(), itemRect.width());
             int textY = itemRect.y() + itemFont.fontMetrics().ascent() + (itemRect.height() - itemFont.fontMetrics().height()) / 2;
             context.drawBidiText(itemFont, textRun, IntPoint(textX, textY));
         }
