Source/WebKit/gtk/webkit/webkithittestresult.cpp
@@ -318,9 +318,9 @@ WebKitHitTestResult* kit(const WebCore::HitTestResult& result)
     targetFrame = result.targetFrame();
     if (targetFrame && targetFrame->view()) {
         // Convert document coords to widget coords.
-        point = targetFrame->view()->contentsToWindow(result.point());
+        point = targetFrame->view()->contentsToWindow(result.roundedPoint());
     } else
-        point = result.point();
+        point = result.roundedPoint();
 
     return WEBKIT_HIT_TEST_RESULT(g_object_new(WEBKIT_TYPE_HIT_TEST_RESULT,
                                                "link-uri", linkURI.get(),
